[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paystackpay"
version = "1.0.1"
description = "A Python wrapper for the Paystack API"
authors = [
    {name = "Aglili Selorm Cecil", email = "cecilselorm34@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/aglili/paystackpay"
Source = "https://github.com/aglili/paystackpay"
"Bug Tracker" = "https://github.com/aglili/paystackpay/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "python-dotenv>=1.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["paystackpay*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["paystackpay"]

[tool.ruff.format]
quote-style = "double"
